; ModuleID = '/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-data.c_get_counter_serialized_raw.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-data.c_get_counter_serialized_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.counter = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_counter_serialized_raw(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.counter*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i64, i64* %6, align 8
  %10 = load i32, i32* %7, align 4
  %11 = call %struct.counter* @get_counter_old(i64 %9, i32 %10, i32 1)
  store %struct.counter* %11, %struct.counter** %8, align 8
  %12 = load %struct.counter*, %struct.counter** %8, align 8
  %13 = icmp ne %struct.counter* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %25

15:                                               ; preds = %3
  %16 = load %struct.counter*, %struct.counter** %8, align 8
  %17 = getelementptr inbounds %struct.counter, %struct.counter* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp eq i32 %18, -2
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  store i32 -2, i32* %4, align 4
  br label %25

21:                                               ; preds = %15
  %22 = load %struct.counter*, %struct.counter** %8, align 8
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @counter_serialize_raw(%struct.counter* %22, i8* %23)
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %21, %20, %14
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local %struct.counter* @get_counter_old(i64, i32, i32) #1

declare dso_local i32 @counter_serialize_raw(%struct.counter*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
